--- a/template/package.json
+++ b/template/package.json
@@ -1,15 +1,10 @@
 {
   "name": "<%= name %>",
-  "version": "0.0.1",
+  "version": "<%= version %>",
   "description": "<%= description %>",
   "private": <%= private %>,
-  "main": "app.js",
-  "scripts": {
-    "test": "./node_modules/.bin/istanbul cover _mocha test/**/*.spec.js && open coverage/lcov-report/*.html",
-    "doc": "apidoc -i ./src/ -o ./doc/"
-  },
+  "main": "src/app.js",
   "keywords": "",
-  "precommit": "test",
   <% if (github) { %>
   "repository": {
     "type": "git",
@@ -33,10 +28,6 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^2.4.5",
-    "mochawesome": "^1.5.3",
-    "pre-commit": "^1.1.3",
     "should": "^8.3.2",
     "supertest": "^2.0.0",
     "supertest-as-promised": "^4.0.0"
